# blitzdb

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  NOTES.md  README.md  TODO.md  efa-testing.pkr.hcl  efa-testing.provision.sh  test_integration.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: loadtest.yml  pyproject.toml
blitzdb-client/: Cargo.toml
blitzdb-client/src/: lib.rs  main.rs
blitzdb-common/: Cargo.toml
blitzdb-common/src/: buffer_pool.rs  cluster.rs  driver.rs  endpoint.rs  error.rs  lib.rs  logging.rs  op.rs
blitzdb-fabric/: Cargo.toml
blitzdb-fabric/src/: driver.rs  endpoint.rs  lib.rs  op.rs
blitzdb-loadtest/: Cargo.toml
blitzdb-loadtest/src/: main.rs
blitzdb-prepare/: Cargo.toml
blitzdb-prepare/src/: lib.rs  main.rs
blitzdb-server/: Cargo.toml
blitzdb-server/src/: main.rs
blitzdb-server/tests/: integration.rs  loadtest.rs
