[workspace]
members = ["blitzdb-common", "blitzdb-server", "blitzdb-client", "blitzdb-prepare", "blitzdb-loadtest"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Steve McKay <steve@b.abbies.us>"]
edition = "2024"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
ofi-libfabric-sys = { git = "https://github.com/ofiwg/libfabric", rev = "f5d730cbe713cb886ef0f1e0901f85ce228e47ea" }
chitchat = "0.10"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"
twox-hash = "2.1"
crossbeam-channel = "0.5"
boomphf = { version = "0.6", features = ["serde"] }
hostname = "0.4"
sd-notify = "0.5"
bincode = "1"
parquet = "58"
arrow-array = "58"
arrow-schema = "58"
tempfile = "3"
rand = "0.9"
crossbeam-queue = "0.3.12"

[profile.release]
debug = "full"