[package]
name = "blitzdb-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
blitzdb-common = { path = "../blitzdb-common" }
chitchat = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
boomphf = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }