[package]
name = "blitzdb-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chitchat = { workspace = true }
hostname = { workspace = true }
ofi-libfabric-sys = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
twox-hash = {workspace = true}
tokio = { workspace = true }
log = { workspace = true }
