[package]
name = "blitzdb-fabric"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
blitzdb-common = { path = "../blitzdb-common" }
ofi-libfabric-sys = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
crossbeam-channel = {workspace = true}