[package]
name = "blitzdb-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
blitzdb-common = { path = "../blitzdb-common" }
anyhow = { workspace = true }
ofi-libfabric-sys = { workspace = true }
chitchat = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
sd-notify = "0.5"

[dev-dependencies]
parquet = "58"
arrow-array = "58"
arrow-schema = "58"
tempfile = "3"