[package]
name = "blitzdb-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
blitzdb-common = { path = "../blitzdb-common" }
anyhow = { workspace = true }
ofi-libfabric-sys = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
sd-notify = { workspace = true }

[dev-dependencies]
blitzdb-client = { path = "../blitzdb-client" }
boomphf = { workspace = true }
bincode = { workspace = true }
parquet = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
tempfile = { workspace = true }