[package]
name = "blitzdb-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
blitzdb-common = { path = "../blitzdb-common" }
anyhow = { workspace = true }
ofi-libfabric-sys = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
sd-notify = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
blitzdb-client = { path = "../blitzdb-client" }
blitzdb-prepare = { path = "../blitzdb-prepare" }
parquet = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }